2007-07-15  Albrecht Dreß

	* src/balsa-print-object.c: (cairo_print_pixbuf): print icon
	colors correctly regardless of endianness.

2007-07-04  Pawel Salek

	* NEWS, configure.in: release 2.3.17.

2007-07-01  Pawel Salek

	* libbalsa/imap/pop3.c: validate APOP server stamp.
	* libbalsa/imap/imap-search.c: split long SEARCH commands into
	several ones.
	* libbalsa/mailbox_imap.c: return correct bool code on flag store.

2007-06-21  Peter Bloomfield

	* src/main-window.c: (display_new_mail_notification): respect
	balsa_app.notify_new_mail_dialog.
	* libbalsa/address.c: (vcard_qp_decode): build with GMime >=
	2.5.5

2007-06-19  Albrecht Dress

	* libbalsa/address.[hc]: make VCARD support more RFC-compatible.
	* src/balsa-mime-widget-text.c: improve displaying.
	* balsa-print-object-text.[hc]: add printing.
	
2007-06-17  Pawel Salek

	* libbalsa/imap/imap-handle.c: handle ESEARCH response.
	* libbalsa/imap/imap-handle.h: recognize ESEARCH extension.
	* libbalsa/imap/imap-commands.c: use it to optimize searches.
	* libbalsa/imap/imap-search.c: ditto.

2007-06-15  Pawel Salek

	Commit Peter's patches for broader testing...
	* libbalsa/imap/imap-handle.c: detect disconnection.
	* libbalsa/imap/imap-commands.c: check for header existence in client
	side sorting.

2007-06-10  Peter Bloomfield

	* src/balsa-index.c: (bndx_expand_to_row): avoid critical
	warnings from GtkTreeView.

2007-06-07  Pawel Salek

	* src/store-address.[ch]: add ability to create addresses from
	VCARD strings.
	* src/balsa-index.c: use new store_address() function names.
	* src/main-window.c: ditto.
	* src/balsa-mime-widget-text.c: add ability to store attached
	 e-mail addresses.
	* libbalsa/address-book-vcard.c: use common VCARD functions.
	* libbalsa/address.[ch]: move common VCARD functions here.

2007-06-05  Peter Bloomfield

	* libbalsa/mime.c: (unwrap_rfc2646): inline check for "-- \n".
	* libbalsa/mailbox.c: (lbm_try_reassemble): do not get message
	just to test flags.