@@ -113,6 +113,10 @@ AC_ARG_ENABLE([smime],
    AC_HELP_STRING([--enable-smime],
                   [include S/MIME support (needs gpgme and gpgsm, experimental) (default=no)]),
 	          [ have_smime=$enableval ], [ have_smime=no ])
+AC_ARG_WITH([gpg-app],
+   AC_HELP_STRING([--with-gpg-app=PATH],
+                  [use PATH as GnuPG application (default=gpg2 if >= 2.0.4, otherwise gpg 1.x)]),
+	          [ gpgapp=$withval ], [ gpgapp=no ])
 
 AC_ARG_WITH([gtkhtml],
               AC_HELP_STRING([--with-gtkhtml],
@@ -394,11 +398,6 @@ if test x"$gpgmecfg" != xno ; then
 		AC_DEFINE(HAVE_GPGME,1,[Defined when gpgme is available.])
 		BALSA_CFLAGS="$BALSA_CFLAGS `$gpgmecfg --cflags`"
 		gpgmecfg=yes
-		AC_PATH_PROG(gpg_path, gpg)
-		if test x"$gpg_path" != "x" ; then
-			AC_DEFINE(HAVE_GPG,1,[Defined when gpg is available.])
-			AC_DEFINE_UNQUOTED(GPG_PATH,["$gpg_path"],[Path of gpg.])
-		fi
 		AC_MSG_CHECKING(whether to include experimental S/MIME support)
 		if test x"$have_smime" = xyes ; then
 			AC_MSG_RESULT([yes])
@@ -416,6 +415,58 @@ fi
 AM_CONDITIONAL([BUILD_WITH_GPGME], [test $gpgmecfg = "yes"])
 AM_CONDITIONAL([BUILD_WITH_SMIME], [test $have_smime = "yes"])
 
+# check the GnuPG engine application version
+# note: gpg2 interacts fine with gpgme only since version 2.0.4
+AC_DEFUN([AC_CHECK_GPG_VER],[
+	if ! test -x $1 ; then
+		AC_MSG_ERROR([$1 is not executable])
+	fi
+	AC_MSG_CHECKING([$1 version])
+	gpgver=`$1 --version | sed -e 's/.* //' -e q`
+	AC_MSG_RESULT($gpgver)
+        gpg_ve=`echo $gpgver|sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
+        gpg_ma=`echo $gpgver|sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
+        gpg_mi=`echo $gpgver|sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/'`
+	if test \( $gpg_ve -eq 2 \) -a \( $gpg_ma -eq 0 \) -a \( $gpg_mi -lt 4 \) ; then
+    		ifelse([$3], , :, [$3])
+	else
+    		ifelse([$2], , :, [$2])
+	fi])
+
+# find a suitable GnuPG engine if gpgme is enabled
+if test x"$gpgmecfg" != xno ; then
+	if test x"$gpgapp" != xno ; then
+		AC_CHECK_GPG_VER($gpgapp, , 
+				 AC_MSG_ERROR([gpg2 < 2.0.4 does not communicate properly with gpgme]))
+	else
+		AC_PATH_PROG(gpg2, gpg2, [no])
+		if test x"$gpg2" != xno ; then
+			AC_CHECK_GPG_VER($gpg2, [gpgapp=$gpg2],
+					 AC_MSG_WARN([gpg2 < 2.0.4 does not communicate properly with gpgme]))
+		fi
+		if test x"$gpgapp" = xno ; then
+			AC_PATH_PROG(gpg, gpg, [no])
+			if test x"$gpg" != xno ; then
+				AC_CHECK_GPG_VER($gpg, [gpgapp=$gpg],
+					 	AC_MSG_WARN([gpg2 < 2.0.4 does not communicate properly with gpgme]))
+			fi
+		fi
+		if test x"$gpgapp" = xno ; then
+			AC_PATH_PROG(gpg1, gpg1, [no])
+			if test x"$gpg1" != xno ; then
+				AC_CHECK_GPG_VER($gpg1, [gpgapp=$gpg1],
+					 	AC_MSG_WARN([gpg2 < 2.0.4 does not communicate properly with gpgme]))
+			fi
+		fi
+	fi
+	if test x"$gpgapp" != xno ; then
+		AC_DEFINE(HAVE_GPG,1,[Defined when gpg is available.])
+		AC_DEFINE_UNQUOTED(GPG_PATH,["$gpgapp"],[Path of gpg.])
+	else
+		AC_MSG_WARN([cannot find a suitable gpg application])
+		AC_MSG_WARN([please consider using --with-gpg-app to specify it])
+	fi
+fi
 
 # OpenLDAP configuration.
 #
